fidoconfig 0.91
---------------

----- cvs ci ------
Sat Jan 29 00:32:51 NOVT 2000
max:
* change makefiles to compile with $(LIB) & $(OBJ)
patch from Serguei Revtov:
* make fidoconfig compiling on sun (makefile.sun) again

----- cvs ci ------
Thu Jan 27 20:59:22 CET 2000
mtt:
* changed in makefile.common $(A) to $(LIB)

----- cvs ci ------
Thu Jan 27 18:42:50 CET 2000
mtt (patch from Alex Semyanka)
* added NetmailExtern (carbonExtern for netmails)
* added processPkt for calling pktdate etc.

----- cvs ci ------
Tue Jan 25 13:46:13 NOVT 2000
max (patch from Serguei Revtov):
* linkedto: read config file in current directory

----- cvs ci ------
Tue Jan 25 00:43:18 NOVT 2000
max (patch from Serguei Revtov):
* make fidoconfig compiling on sun (makefile.sun)

----- cvs ci ------
Sat Jan 22 11:16:22 NOVT 2000
max:
* delete old level access code

----- cvs ci ------
Sat  22 Jan 2000 00:36:55 CET
tobi (patch from Eduard Dulich)
* improved linkedto srcipt (now also searches include files, and finds
  exact matches)
	
----- cvs ci ------
Fri Jan 21 19:53:20 NOVT 2000
max (patch from Serguei Revtov):
* carbonDelete bugfix
* normal print carbonDelete in tparser
* init netMail field in carbons
* "off" in autoareacreate & autofilecreate tokens

----- cvs ci ------
Thu Jan 20 15:10:29 NOVT 2000
max (patch from Serguei Revtov):
* fecf2fconf: added wthitespace before "-b msgbasetype"
* check second parameter in parseFileName
* carbonDelete don't movin' messages to BadArea now

----- cvs ci ------
Sun Jan 16 14:10:00 CET 2000
sms:
* added warning if dupeHistoryDir is not set
* added "-I../smapi" to husky.lnx

----- cvs ci ------
Mon Jan  3 17:45:54 NOVT 2000                                                   
max (patch from Kolya Nesterov):
* added carbonDelete token (this is really a twit feature)

----- cvs ci ------
Mon Dec 27 23:03:29 NOVT 1999                                                   
max:
* manual means mandatory

----- cvs ci ------
Sat Dec 25 19:27:26 NOVT 1999