@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Fri Jan 28 21:40:00 CET 2000
+sms:
+* changed groups from chars to strings
+
+----- cvs ci ------
 Sat Jan 29 00:32:51 NOVT 2000
 max:
 * change makefiles to compile with $(LIB) & $(OBJ)
